--- a/app/src/main/res/layout/categories_list_row.xml
+++ b/app/src/main/res/layout/categories_list_row.xml
@@ -17,7 +17,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         />
+        android:contentDescription="@string/categoryImage" />
 
     <TextView
         android:id="@+id/title"
@@ -31,6 +31,14 @@
         android:textColor="@color/title"
         android:textSize="16sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_toEndOf="@+id/imageView"
+        android:layout_toRightOf="@+id/imageView" />
 
 
 </RelativeLayout>
