--- a/app/src/main/res/layout/categories_pray_row.xml
+++ b/app/src/main/res/layout/categories_pray_row.xml
@@ -17,7 +17,9 @@
         android:id="@+id/imagePrayRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/categoryImage" />
+        android:contentDescription="@string/categoryImage"
+        android:layout_centerVertical="true"
+      />
 
     <TextView
         android:id="@+id/title"
@@ -32,17 +34,17 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin" />
+         />
 
     <TextView
-        android:id="@+id/tag"
-        android:layout_width="wrap_content"
+        android:id="@+id/tag_pray"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:layout_toEndOf="@+id/imagePrayRow"
         android:layout_toRightOf="@+id/imagePrayRow"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin"/>
+        />
 
 
 </RelativeLayout>
