--- a/app/src/main/res/layout/fragment_psalm_single_new.xml
+++ b/app/src/main/res/layout/fragment_psalm_single_new.xml
@@ -24,7 +24,7 @@
         android:textStyle="bold" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/image_ru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -35,7 +35,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/imageButton2"
+        android:layout_above="@+id/image_ru"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/psalm_header" />
