--- a/app/src/main/res/layout/icons_recycle.xml
+++ b/app/src/main/res/layout/icons_recycle.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:background="#606060"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main">
+    >
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/icons_recycle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
