--- a/app/src/main/res/layout/pray_single_row.xml
+++ b/app/src/main/res/layout/pray_single_row.xml
@@ -28,7 +28,7 @@
         android:textColor="@color/title" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/pray_fav_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
