sql getsinglepray feature

--- a/app/src/main/res/layout/pray_single_row.xml
+++ b/app/src/main/res/layout/pray_single_row.xml
@@ -24,8 +24,9 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/pray_header"
         android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="@color/title" />
+        android:textAlignment="textStart"
+        android:textColor="@color/title"
+        android:gravity="start" />
 
     <ImageView
         android:id="@+id/pray_fav_img"
