--- a/app/src/main/res/layout/fragment_psalm_single_tag.xml
+++ b/app/src/main/res/layout/fragment_psalm_single_tag.xml
@@ -33,6 +33,7 @@
         app:srcCompat="@android:drawable/star_big_on" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/psalm_lines_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/image_ru"
