--- a/app/src/main/res/layout/psalm_single_row.xml
+++ b/app/src/main/res/layout/psalm_single_row.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/row_padding_vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/row_padding_vertical">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/row_padding_vertical"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/row_padding_vertical">
 
     <TextView
         android:id="@+id/ps_line_num"
@@ -18,7 +19,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#F44336"
-        android:text="N"
+        tools:text="N"
 />
 
     <TextView
@@ -28,7 +29,7 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/ps_line_num"
         android:layout_toRightOf="@+id/ps_line_num"
-        android:text="TextView" />
+        tools:text="TextView" />
 
 
 </RelativeLayout>
