--- a/app/src/main/res/layout/psalm_single_row.xml
+++ b/app/src/main/res/layout/psalm_single_row.xml
@@ -8,8 +8,6 @@
                 android:focusable="true"
                 android:orientation="vertical"
                 android:paddingBottom="@dimen/row_padding_vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/row_padding_vertical">
 
     <TextView
@@ -19,6 +17,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#F44336"
+        android:textSize="22sp"
         tools:text="N"
 />
 
@@ -29,7 +28,9 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/ps_line_num"
         android:layout_toRightOf="@+id/ps_line_num"
-        tools:text="TextView" />
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        tools:text="TextView"
+         />
 
 
 </RelativeLayout>
