--- a/app/src/main/res/drawable/fav_button.xml
+++ b/app/src/main/res/drawable/fav_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="wrap_content">
-    <item android:state_pressed="true" android:drawable="@drawable/ic_star_active"/>
-    <item android:state_pressed="false" android:drawable="@drawable/ic_star_inactive"/>
+    <item android:state_checked="true" android:drawable="@drawable/ic_star_active" />
+    <item android:state_checked="false" android:drawable="@drawable/ic_star_inactive" />
 </selector>
