--- a/app/src/main/res/layout/fragment_psalm_single_tag.xml
+++ b/app/src/main/res/layout/fragment_psalm_single_tag.xml
@@ -17,30 +17,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/psalm_fav_img"
+        android:layout_toRightOf="@+id/psalm_fav_img"
         android:text="header"
         android:textAlignment="center"
         android:textColor="@color/title"
         android:textSize="16sp"
         android:textStyle="bold" />
 
-    <ImageButton
-        android:id="@+id/image_ru"
+    <CheckBox
+        android:id="@+id/psalm_fav_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        app:srcCompat="@android:drawable/star_big_on" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:button="@drawable/fav_button" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/psalm_lines_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/image_ru"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/psalm_header"
-        />
+        android:layout_below="@+id/psalm_header" />
 
 
 </RelativeLayout>
