--- a/app/src/main/res/layout/empty_recycler_view.xml
+++ b/app/src/main/res/layout/empty_recycler_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/psalms_categories_recycler_view"
+    android:id="@+id/empty_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scrollbars="vertical" />
+    android:scrollbars="vertical"
+    />
